--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -20,6 +20,7 @@ jobs:
             java_arch: x64
             msvc_arch: amd64_arm64
             extra_java: 17
+            vendor: zulu
           - os: macos-latest
             arch: x64
             java_arch: x64
@@ -27,12 +28,14 @@ jobs:
             arch: arm64
             java_arch: x64
             extra_java: 8
+            vendor: zulu
           - os: ubuntu-20.04
             arch: i386
             java_arch: x64
             linux_arch: i386
             packages: gcc-multilib
             extra_java: 8
+            vendor: zulu
           - os: ubuntu-20.04
             arch: amd64
             java_arch: x64
@@ -43,6 +46,7 @@ jobs:
             packages: gcc-aarch64-linux-gnu libc6-dev-arm64-cross g++-aarch64-linux-gnu
             ports: true
             extra_java: 8
+            vendor: zulu
           - os: ubuntu-20.04
             arch: ppc64le
             java_arch: x64
@@ -50,6 +54,7 @@ jobs:
             packages: gcc-powerpc64le-linux-gnu libc6-dev-ppc64el-cross g++-powerpc64le-linux-gnu
             ports: true
             extra_java: 8
+            vendor: temurin
           - os: ubuntu-22.04
             arch: riscv64
             java_arch: x64
@@ -77,7 +82,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: ${{ matrix.extra_java }}
-        distribution: zulu
+        distribution: ${{ matrix.vendor }}
         architecture: ${{ matrix.arch }}
     - name: Set up ${{ matrix.java_arch }} zulu JDK 8
       uses: actions/setup-java@v3
