--- a/build.gradle
+++ b/build.gradle
@@ -252,4 +252,21 @@ publishing {
             }
         }
     }
+    setupRepositories(repositories)
+}
+
+def static setupRepositories(RepositoryHandler repositories) {
+    def ENV = System.getenv()
+    if (ENV.MAVEN_PUBLISH_CREDENTIALS) {
+        repositories.maven {
+            url 'https://repo.legacyfabric.net/repository/legacyfabric'
+            credentials {
+                username ENV.MAVEN_PUBLISH_CREDENTIALS.split(":")[0]
+                password ENV.MAVEN_PUBLISH_CREDENTIALS.split(":")[1]
+            }
+            authentication {
+                basic(BasicAuthentication)
+            }
+        }
+    }
 }
