some more osx tweaks

--- a/gradle/macosx.gradle
+++ b/gradle/macosx.gradle
@@ -29,21 +29,19 @@ if (target_arch == "arm64" || target_arch == "aarch64") {
     macos_target = "11.0"
 }
 
-def developer_path;
+def developer_path = "/Developer";
 
 try {
     def developer_path_pros = Os.isFamily("mac") ? "xcode-select -print-path".execute() : null
 
-    if (developer_path_pros == null || developer_path_pros.exitValue() != 0) {
-        developer_path = "/Developer"
-    } else {
+    if (!(developer_path_pros == null || developer_path_pros.exitValue() != 0)) {
         developer_path = developer_path_pros.text.trim()
     }
 } catch (ignored) {
-    developer_path = "/Developer"
+    ignored.printStackTrace()
 }
 
-if (developer_path == "/Developer") {
+if (developer_path == "/Developer" && ENV.ARCHITECTURE) {
     developer_path = (ENV.XCODE_13_DEVELOPER_DIR ? ENV.XCODE_13_DEVELOPER_DIR : (
             ENV.XCODE_14_DEVELOPER_DIR ? ENV.XCODE_14_DEVELOPER_DIR : (
                     ENV.XCODE_15_DEVELOPER_DIR ? ENV.XCODE_15_DEVELOPER_DIR : "/Developer"
