fix missing destination directory for native jars

--- a/lwjgl-platform/build.gradle
+++ b/lwjgl-platform/build.gradle
@@ -40,6 +40,7 @@ tasks.register("linuxNativeJar", Jar) {
         include "libopenal*.so"
     }
     archiveClassifier.set("natives-linux")
+    destinationDirectory.set(file("build/libs"))
     archiveBaseName.set("lwjgl-platform")
 }
 
@@ -52,6 +53,7 @@ tasks.register("macosxNativeJar", Jar) {
         include "openal*.dylib"
     }
     archiveClassifier.set("natives-osx")
+    destinationDirectory.set(file("build/libs"))
     archiveBaseName.set("lwjgl-platform")
 }
 
@@ -64,6 +66,7 @@ tasks.register("windowsNativeJar", Jar) {
         include "OpenAL*.dll"
     }
     archiveClassifier.set("natives-windows")
+    destinationDirectory.set(file("build/libs"))
     archiveBaseName.set("lwjgl-platform")
 }
 
