--- a/gradle/windows.gradle
+++ b/gradle/windows.gradle
@@ -4,44 +4,32 @@ def getNativeFolder(String name, String fold) {
     return file("lwjgl-platform/src/" + name + "/c/" + fold).toString()
 }
 
+def target_arch = ENV.ARCHITECTURE ? ENV.ARCHITECTURE : System.getProperty("os.arch")
+
+if (target_arch == "x86" || target_arch == "i386") {
+    target_arch = "i386"
+} else if (target_arch == "arm64" || target_arch == "aarch64") {
+    target_arch = "aarch64"
+} else {
+    target_arch = "amd64"
+}
+
 def java_home = ENV.JAVA_HOME + "/jre"
 
-if (ENV.ARCHITECTURE == "arm64") {
+if (ENV.ARCHITECTURE && target_arch == "aarch64") {
     java_home = ENV.JAVA_HOME_17_ARM64 + "/jre"
 }
 
 def sdkhome = ENV.VCToolsInstallDir ? ENV.VCToolsInstallDir : ENV.MSVC
 def sdkhomelib = sdkhome + "/lib/x64"
 
-if (ENV.ARCHITECTURE) {
-    if (ENV.ARCHITECTURE == "x86") {
-        sdkhomelib = sdkhome + "/lib"
-    } else if (ENV.ARCHITECTURE == "arm64") {
-        sdkhomelib = sdkhome + "/lib/arm64"
-    }
-} else {
-    if (System.getProperty("os.arch") == "x86") {
-        sdkhomelib = sdkhome + "/lib"
-    } else if (System.getProperty("os.arch") == "arm64") {
-        sdkhomelib = sdkhome + "/lib/arm64"
-    }
+if (target_arch == "i386") {
+    sdkhomelib = sdkhome + "/lib"
+} else if (target_arch == "aarch64") {
+    sdkhomelib = sdkhome + "/lib/arm64"
 }
 
-def dllname = "lwjgl64.dll"
-
-if (ENV.ARCHITECTURE) {
-    if (ENV.ARCHITECTURE == "x86") {
-        dllname = "lwjgl.dll"
-    } else if (ENV.ARCHITECTURE == "arm64") {
-        dllname = "lwjgl-arm64.dll"
-    }
-} else {
-    if (System.getProperty("os.arch") == "x86") {
-        dllname = "lwjgl.dll"
-    } else if (System.getProperty("os.arch") == "arm64") {
-        dllname = "lwjgl-arm64.dll"
-    }
-}
+def dllname = "lwjgl-windows-${target_arch}.dll"
 
 def libss = "Kernel32.lib ole32.lib OpenGL32.Lib Version.lib user32.lib Gdi32.lib Advapi32.lib jawt.lib delayimp.lib winmm.lib Comctl32.lib"
 
@@ -89,7 +77,7 @@ tasks.register("compile_win32", Exec) {
                 "\nDLLName: ${dllname}" +
                 "\nJava Home: ${java_home}" +
                 "\nOS arch: ${System.getProperty("os.arch")}" +
-                "\nTarget arch ${ENV.ARCHITECTURE ? ENV.ARCHITECTURE : System.getProperty("os.arch")}"
+                "\nTarget arch ${target_arch}"
         )
     }
 
