--- a/lwjgl_examples/build.gradle
+++ b/lwjgl_examples/build.gradle
@@ -5,4 +5,5 @@ plugins {
 dependencies {
     implementation(project(":lwjgl-common"))
     implementation(project(":lwjgl"))
+//    implementation(project(":lwjgl").sourceSets.test)
 }
